RoiConverter: Do not rely on ImagePlus access